# xv6sh

./: test.sh  xv6sh.cabal
src/: Main.hs
