name:                xv6sh
version:             0.1.0.0
synopsis:            Simple shell
description:         Please see README.md
homepage:            http://github.com/glutamate/xv6sh
license:             MIT
license-file:        LICENSE
author:              Tom Nielsen
maintainer:          example@example.com
copyright:           2016 Tom Nielsen
category:            Shell
build-type:          Simple
cabal-version:       >=1.10

executable xv6sh
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
